# fedge-dot-com

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.py  alembic.ini  mkdocs.yml  pyproject.toml  pytest.ini
.aiassistant/rules/: AGENTS.md
.codex/: agents.md
.github/workflows/: zensical_mkdocs.yml
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: 2026-04-06_create_dummies_table.py  2026-04-08_add_dob_and_self_intro_field_for_a_dummy.py  2026-04-09_add_dummies_password.py  2026-04-14_add_role_column_and_missing_models.py  2026-04-14_create_users_table.py  2026-04-15_rename_date_and_at_columns_to_time_and_.py  2026-04-17_remove_dummy_table.py  2026-04-17_remove_google_oauth_and_non_user_tables.py  2026-04-29_fix_column.py  2026-04-29_new_google_oauth_state_and_credential_.py  2026-04-30_create_orders_table.py  2026-05-04_add_google_oauth_state_auth_url.py  2026-05-04_google_oauth_app_user_id_int.py  2026-05-04_make_google_oauth_credential_client_fields_not_null.py  2026-05-04_make_google_oauth_state_code_verifier_not_null.py  2026-05-04_rename_google_user_id_and_add_fk.py
docs/: README.md  architecture-module-boundaries.md  codebase-audit-tasks.md  index.md
docs/about/: index.md
docs/css/: extra.css
docs/database/: alembic-setup.md  config-alembic.md  config-model.md  database-setup.md  index.md  performing-migration.md
docs/deploy/: docker.md  index.md  uv.md
requirements/: base.txt  dev.txt
src/: config.py  database.py  exceptions.py  helper.py  main.py  schemas.py  templates.py
tests/: abstracts.py  conftest.py
(+141 files in other folders)
