[project]
name = "fedge"
version = "0.2"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic[email]",
    "sqlalchemy==2.0.48",
    "asyncer==0.0.17",
    "jinja2==3.1.6",
    # ----- Web & API
    "fastapi[standard]==0.135.3",
    "uvicorn==0.42.0",
    "alembic==1.18.4",
    # ----- Google
    "google-auth==2.49.1",
    "google-auth-oauthlib==1.3.1",
    "google-api-python-client==2.193.0",
    # ----- Database & PostgreSQL
    "aiosqlite==0.22.1",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    # ----- Authentication & Security
    "python-multipart==0.0.24",
    "pwdlib==0.3.0",
    "pwdlib[argon2]",
    "pyjwt==2.12.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "black==26.3.1",
    "isort==8.0.1",
    "zensical==0.0.33",
    "pandas==3.0.2",
    "ipykernel==7.2.0",
]

[tool.uv]
preview = true

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip = [".venv", "migrations"]
force_sort_within_sections = true
include_trailing_comma = true

